add_library(gammaray
    Graphics/CameraView.cpp
    Graphics/CameraView.h
    Graphics/DirectLight.cpp
    Graphics/DirectLight.h
    Graphics/Extents.cpp
    Graphics/Extents.h
    Graphics/Light.h
    Graphics/Material.cpp
    Graphics/Material.h
    Graphics/MaterialBase.h
    Graphics/SceneDescription.cpp
    Graphics/SceneDescription.h
    Graphics/TransformViewable.cpp
    Graphics/TransformViewable.h
    Graphics/View.h
    Graphics/ViewableBase.cpp
    Graphics/ViewableBase.h
    Graphics/ViewableBezierSet.cpp
    Graphics/ViewableBezierSet.h
    Graphics/ViewableCone.cpp
    Graphics/ViewableCone.h
    Graphics/ViewableCylinder.cpp
    Graphics/ViewableCylinder.h
    Graphics/ViewableEllipsoid.cpp
    Graphics/ViewableEllipsoid.h
    Graphics/ViewableParallelepiped.cpp
    Graphics/ViewableParallelepiped.h
    Graphics/ViewableParallelogram.cpp
    Graphics/ViewableParallelogram.h
    Graphics/ViewableSphere.cpp
    Graphics/ViewableSphere.h
    Graphics/ViewableTorus.cpp
    Graphics/ViewableTorus.h
    Graphics/ViewableTriangle.cpp
    Graphics/ViewableTriangle.h
    Graphics/VisiblePoint.h
    GraphicsTrees/IntersectionKdTree.cpp
    GraphicsTrees/IntersectionKdTree.h
    Gray/Config.h
    Gray/Config.cpp
    Gray/GammaMaterial.h
    Gray/GammaRayTrace.cpp
    Gray/GammaRayTrace.h
    Gray/LoadDetector.cpp
    Gray/LoadDetector.h
    Gray/LoadMaterials.cpp
    Gray/LoadMaterials.h
    KdTree/DoubleRecurse.cpp
    KdTree/DoubleRecurse.h
    KdTree/KdTree.h
    KdTree/KdTree.cpp
    Output/BinaryFormat.h
    Output/Detector.cpp
    Output/Detector.h
    Output/DetectorArray.cpp
    Output/DetectorArray.h
    Output/Input.cpp
    Output/Input.h
    Output/Output.cpp
    Output/Output.h
    Physics/Beam.cpp
    Physics/Beam.h
    Physics/GammaDecay.cpp
    Physics/GammaDecay.h
    Physics/GammaStats.cpp
    Physics/GammaStats.h
    Physics/Interaction.cpp
    Physics/Interaction.h
    Physics/Isotope.cpp
    Physics/Isotope.h
    Physics/NuclearDecay.cpp
    Physics/NuclearDecay.h
    Physics/BeamDecay.cpp
    Physics/BeamDecay.h
    Physics/Photon.cpp
    Physics/Photon.h
    Physics/Positron.cpp
    Physics/Positron.h
    Physics/PositronDecay.cpp
    Physics/PositronDecay.h
    Physics/Physics.cpp
    Physics/Physics.h
    Pipeline/blur.h
    Pipeline/Blur.cpp
    Pipeline/blurprocess.h
    Pipeline/coincprocess.h
    Pipeline/deadtimeprocess.h
    Pipeline/filterprocess.h
    Pipeline/mergeprocess.h
    Pipeline/paralleloutstream.h
    Pipeline/processor.h
    Pipeline/processstream.h
    Pipeline/InteractionStream.h
    Pipeline/InteractionStream.cpp
    Pipeline/sortprocess.h
    Random/Random.cpp
    Random/Random.h
    Sources/AnnulusCylinderSource.cpp
    Sources/AnnulusCylinderSource.h
    Sources/AnnulusEllipticCylinderSource.cpp
    Sources/AnnulusEllipticCylinderSource.h
    Sources/BeamPointSource.cpp
    Sources/BeamPointSource.h
    Sources/CylinderSource.cpp
    Sources/CylinderSource.h
    Sources/EllipsoidSource.cpp
    Sources/EllipsoidSource.h
    Sources/EllipticCylinderSource.cpp
    Sources/EllipticCylinderSource.h
    Sources/RectSource.cpp
    Sources/RectSource.h
    Sources/Source.h
    Sources/SourceList.cpp
    Sources/SourceList.h
    Sources/SphereSource.cpp
    Sources/SphereSource.h
    Sources/VectorSource.cpp
    Sources/VectorSource.h
    Sources/VoxelSource.cpp
    Sources/VoxelSource.h
    VrMath/Aabb.cpp
    VrMath/Aabb.h
    VrMath/LinearR2.cpp
    VrMath/LinearR2.h
    VrMath/LinearR3.cpp
    VrMath/LinearR3.h
    VrMath/LinearR4.cpp
    VrMath/LinearR4.h
    VrMath/MathMisc.h
    VrMath/Parallelepiped.cpp
    VrMath/Parallelepiped.h
    VrMath/PolygonClip.cpp
    VrMath/PolygonClip.h
    VrMath/PolynomialRC.cpp
    VrMath/PolynomialRC.h
    VrMath/Quaternion.cpp
    VrMath/Quaternion.h
    VrMath/VrData.h
)
target_include_directories(gammaray PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
